Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-117788

Assert due to cyclic dependencies

    XMLWordPrintable

Details

    • bf2258e6f (dev), ae9f6b174 (6.6), 1b0d82b80 (tqtc/lts-6.5), ad736f2df (tqtc/lts-6.2)

    Description

      If you create a cyclic dependency between two components via type annotations, it is compiled just fine, but assert at run time.

      ASSERT: "tdata->isComplete()" in file /home/ulf/qt6dev/qtbase/include/QtQml/6.7.0/QtQml/private/../../../../../../../qt6dev-src/qtdeclarative/src/qml/qml/qqmlpropertycachecreator_p.h, line 771
      

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              ulherman Ulf Hermann
              ulherman Ulf Hermann
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: